--- a/mobileproject/app/src/main/AndroidManifest.xml
+++ b/mobileproject/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
         android:theme="@style/Theme.Mobileproject"
         tools:targetApi="31">
         <activity
-            android:name=".webView"
+            android:name=".newsWebView"
             android:exported="false" />
         <activity
             android:name=".videoActivity"
@@ -53,7 +53,7 @@
                 android:value="" />
         </activity>
         <activity
-            android:name=".Newpage"
+            android:name=".newsMainActivity"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
