--- a/mobileproject/app/build.gradle
+++ b/mobileproject/app/build.gradle
@@ -28,8 +28,10 @@ android {
     }
 }
 
+
 dependencies {
     implementation 'org.jsoup:jsoup:1.16.1'
+    implementation 'com.android.volley:volley:1.2.1'
     implementation 'com.squareup.okhttp3:okhttp:4.9.2'
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.9.0'
