--- a/mobileproject/app/src/main/AndroidManifest.xml
+++ b/mobileproject/app/src/main/AndroidManifest.xml
@@ -46,7 +46,7 @@
                 android:value="" />
         </activity>
         <activity
-            android:name=".ImageActivity"
+            android:name=".imagesActivity"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
