using <Webview> for viewing nasa.gov/news website deleting demo API fetching version from newsapi.org website

--- a/mobileproject/app/src/main/AndroidManifest.xml
+++ b/mobileproject/app/src/main/AndroidManifest.xml
@@ -53,7 +53,7 @@
                 android:value="" />
         </activity>
         <activity
-            android:name=".newsMainActivity"
+            android:name=".newsActivity"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
