--- a/mobileproject/app/build.gradle
+++ b/mobileproject/app/build.gradle
@@ -33,6 +33,7 @@ dependencies {
     implementation 'org.jsoup:jsoup:1.16.1'
     implementation 'com.android.volley:volley:1.2.1'
     implementation 'com.squareup.okhttp3:okhttp:4.9.2'
+    implementation 'com.squareup.picasso:picasso:2.8'
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
