trying to create a new query to search for an image. waiting for framelayout to test.

--- a/mobileproject/app/src/main/AndroidManifest.xml
+++ b/mobileproject/app/src/main/AndroidManifest.xml
@@ -50,6 +50,18 @@
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
+        <activity android:name=".imagesSearchActivity"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value=""/>
+        </activity>
+        <activity android:name=".imagesPrimeActivity"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value=""/>
+        </activity>
         <activity
             android:name=".newsActivity"
             android:exported="false">
