--- a/mobileproject/app/src/main/AndroidManifest.xml
+++ b/mobileproject/app/src/main/AndroidManifest.xml
@@ -44,13 +44,13 @@
                 android:value="" />
         </activity>
         <activity
-            android:name=".imagesAPODActivity"
+            android:name=".imagesAPODFragment"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
-        <activity android:name=".imagesSearchActivity"
+        <activity android:name=".imagesSearchFragment"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
